add summary page

--- a/rooms.html
+++ b/rooms.html
@@ -35,7 +35,7 @@
       <th>Raumname</th>
       <th>Teilbereiche</th>
       <th>Art</th>
-      <th>Fläche Gesamt</th>
+      <th>Fläche</th>
       <th>Aktionen</th>
     </tr>
     </thead>
@@ -134,5 +134,6 @@
   <button id="next-page" class="btn btn-success">Weiter</button>
 </footer>
 <script src="js/rooms.js"></script>
+<script src="js/utils.js"></script>
 
 </body></html>
