--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
-<html lang="de"><head><meta charset="UTF-8">
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="de">
+<head>
+  <meta charset="UTF-8" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Wohnflächenberechnung mit Luna</title>
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-  <link href="css/style.css" rel="stylesheet">
-  </head>
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+  <link href="css/style.css" rel="stylesheet" />
+</head>
 <body>
 <div class="container">
   <div class="text-center mt-5">
@@ -25,39 +27,35 @@
     <div class="form-row">
       <div class="form-group col-md-6">
         <label for="firstName">Vorname:</label>
-        <input type="text" class="form-control" id="firstName">
+        <input type="text" class="form-control" id="firstName" />
       </div>
       <div class="form-group col-md-6">
         <label for="lastName">Nachname:</label>
-        <input type="text" class="form-control" id="lastName">
+        <input type="text" class="form-control" id="lastName" />
       </div>
     </div>
     <div class="form-row">
       <div class="form-group col-md-6">
         <label for="street">Straße:</label>
-        <input type="text" class="form-control" id="street">
+        <input type="text" class="form-control" id="street" />
       </div>
       <div class="form-group col-md-6">
         <label for="houseNumber">Nr:</label>
-        <input type="text" class="form-control" id="houseNumber" maxlength="4">
+        <input type="text" class="form-control" id="houseNumber" maxlength="4" />
       </div>
     </div>
     <div class="form-row">
       <div class="form-group col-md-6">
         <label for="zipCode">PLZ:</label>
-        <input type="text" class="form-control" id="zipCode" maxlength="5">
+        <input type="text" class="form-control" id="zipCode" maxlength="5" />
       </div>
       <div class="form-group col-md-6">
         <label for="city">Ort:</label>
-        <input type="text" class="form-control" id="city">
+        <input type="text" class="form-control" id="city" />
       </div>
     </div>
     <div class="form-row">
-      <div class="form-group col-md-6">
-        <label for="image">Foto des Objektes:</label>
-        <input type="file" class="form-control" id="image">
-      </div>
-      <div class="form-group col-md-6">
+      <div class="form-group col-md-4">
         <label for="instrument">Genutztes Messinstrument:</label>
         <select class="form-control" id="instrument">
           <option>Zollstock</option>
@@ -65,9 +63,7 @@
           <option>Lasermessgerät</option>
         </select>
       </div>
-    </div>
-    <div class="form-row">
-      <div class="form-group col-md-6">
+      <div class="form-group col-md-4">
         <label for="objectType">Art des Objektes:</label>
         <select class="form-control" id="objectType">
           <option>Einfamilienhaus</option>
@@ -76,15 +72,17 @@
           <option>Sonstige</option>
         </select>
       </div>
-      <div class="form-group col-md-6">
+      <div class="form-group col-md-4">
         <label for="floors">Anzahl der Vollgeschosse:</label>
-        <input type="number" class="form-control" id="floors">
+        <input type="number" class="form-control" id="floors" />
       </div>
     </div>
-
-    <button type="button" id="next-page" class="btn btn-primary continue-btn">Weiter</button>
   </form>
 </div>
+<footer class="container mt-5 fixed-bottom mb-4" style="">
+  <button id="next-page" class="btn btn-primary continue-btn full-btn">Weiter</button>
+</footer>
 <script src="js/index.js"></script>
 <script src="js/utils.js"></script>
-</body></html>
+</body>
+</html>
