--- a/summary.html
+++ b/summary.html
@@ -6,6 +6,7 @@
   <title>Wohnflächenberechnung - Zusammenfassung</title>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
   <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
@@ -24,8 +25,8 @@
     </div>
   </div>
 
-  <div class="printable-area-wrapper">
-    <div class="printable-area">
+  <div class="printable-area-wrapper container">
+    <div class="printable-area container">
       <div class="content-wrapper">
         <div class="heading">
           <h2>Wohnflächenberechnung nach WoFLV</h2>
@@ -37,7 +38,10 @@
         </div>
         <div class="object">
           <div class="description">
-            <textarea class="form-control hidden-textarea" id="object-address" rows="2" placeholder="Musterstraße 123\n12345 Musterstadt"></textarea>
+            <div class="textarea-wrapper">
+              <textarea class="form-control hidden-textarea" id="object-address" rows="2" placeholder="Musterstraße 123\n12345 Musterstadt"></textarea>
+              <i class="fas fa-edit edit-icon"></i>
+            </div>
             <div class="image">
               <div class="image-placeholder" id="image-placeholder">
                 <span>Bild vom Objekt hochladen</span>
@@ -49,10 +53,13 @@
         <br/>
         <p>Für die Richtigkeit der folgenden Zahlenwerte ist der Verfasser verantwortlich.</p>
         <div class="author-details">
-        <h4>Verfasserdaten</h4>
+          <h4>Verfasserdaten</h4>
           <div class="form-group">
             <label for="verfasserdaten">Verfasserdaten:</label>
-            <textarea class="form-control hidden-textarea" id="verfasserdaten" rows="5" placeholder="Max Mustermann\nMusterstraße 123\n12345 Musterstadt\nmax.mustermann@email.de\n0123 234523"></textarea>
+            <div class="textarea-wrapper">
+              <textarea class="form-control hidden-textarea" id="verfasserdaten" rows="5" placeholder="Max Mustermann\nMusterstraße 123\n12345 Musterstadt\nmax.mustermann@email.de\n0123 234523"></textarea>
+              <i class="fas fa-edit edit-icon"></i>
+            </div>
           </div>
           <div class="small-print">
             Der Verfasser dieser Wohnflächenberechnung versichert, dass er nach bestem Wissen und
@@ -79,12 +86,19 @@
         <div class="person-details">
           <div class="person-author ">
             <h4>Verfasser:</h4>
-            <textarea class="form-control hidden-textarea" id="verfasserdaten" rows="3" placeholder="Max Mustermann\nMusterstraße 123\n12345 Musterstadt"></textarea>
+            <div class="textarea-wrapper">
+              <textarea class="form-control hidden-textarea" id="verfasserdaten" rows="3" placeholder="Max Mustermann\nMusterstraße 123\n12345 Musterstadt"></textarea>
+              <i class="fas fa-edit edit-icon"></i>
+            </div>
+
           </div>
 
           <div class="person-receiver">
             <h4>Empfänger:</h4>
-            <textarea class="form-control hidden-textarea" id="empfaengerdaten" rows="3" placeholder="Max Mustermann\nMusterstraße 123\n12345 Musterstadt"></textarea>
+            <div class="textarea-wrapper">
+              <textarea class="form-control hidden-textarea" id="empfaengerdaten" rows="3" placeholder="Max Mustermann\nMusterstraße 123\n12345 Musterstadt"></textarea>
+              <i class="fas fa-edit edit-icon"></i>
+            </div>
           </div>
         </div>
         <div class="object-details">
@@ -98,34 +112,73 @@
           </div>
 
           <div class="values">
-            <textarea class="form-control hidden-textarea" id="object-daten" rows="4" placeholder="Musterstraße 123\n12345 Musterstadt\nEinfamilienhaus\n2"></textarea>
+            <div class="textarea-wrapper">
+              <textarea class="form-control hidden-textarea" id="object-daten" rows="4" placeholder="Musterstraße 123\n12345 Musterstadt\nEinfamilienhaus\n2"></textarea>
+              <i class="fas fa-edit edit-icon"></i>
+            </div>
             <input class="measuring-device hidden-input" id="object-measuring-details" placeholder="Zollstock"></input>
           </div>
         </div>
         <div class="room-overview">
           <h4>Übersicht der Wohnflächen der einzelnen Räume</h4>
+          <table id="summary-table" class="table">
+            <thead>
+            <tr>
+              <th>Raum (Geschoss)</th>
+              <th>Fläche (m²)</th>
+            </tr>
+            </thead>
+            <tbody id="table-body">
 
+            </tbody>
+          </table>
+          <p>Auf den nachfolgenden Seiten finden Sie eine detaillierte Aufstellung zur Errechnung der Wohn- und
+            Nutzflächen der einzelnen Räume.</p>
         </div>
-
+        <div class="new-page"></div>
+        <div class="room-detailed-overview">
+          <h4>Ermittelte Wohn- und Nutzflächen der einzelnen Räume (Detailansicht)</h4>
+          <table id="room-table" class="table mt-4">
+            <thead>
+            <tr>
+              <th>Nr.</th>
+              <th>Raum</th>
+              <th>Teilflächen</th>
+              <th>Art</th>
+              <th>Wohnfläche</th>
+              <th>Nutzfläche</th>
+            </tr>
+            </thead>
+            <tbody>
+            <!-- Room rows will go here -->
+            </tbody>
+          </table>
+          <div class="table-legend">
+            W - Wohnfläche | W (50%) - Wohnfläche (zu 50% anrechenbar) | N - Nutzfläche
+          </div>
+          <div class="total">
+            <p class="inline-block">Ermittelte (tatsächliche) Gesamtwohnfläche durch Vorortvermessung nach WoFLV:</p> <span class="text-right" id="total-wohnflaeche"></span>
+            <p class="inline-block">Ermittelte Nutzfläche durch Vorortvermessung nach DIN277:</p><span class="text-right" id="total-nutzflaeche"></span>
+          </div>
+        </div>
       </div>
     </div>
   </div>
+</div>
+<footer class="container mt-5 mb-4" style="">
+  <button id="go-back" class="btn btn-primary">Zurück</button>
+  <button id="new-calculation" class="btn btn-danger">Neue Wohnflächenberechnung</button>
+</footer>
 
-  <footer>
-    <button id="go-back" class="btn btn-primary">Zurück</button>
-    <button id="new-calculation" class="btn btn-danger">Neue Wohnflächenberechnung</button>
-  </footer>
-
-  <!-- Modal -->
-  <div id="confirmationModal" class="modal">
-    <div class="modal-content">
-      <p>Möchten Sie wirklich eine neue Wohnflächenberechnung starten? Alle ihre jetzigen Informationen gehen verloren, da diese nur lokal gespeichert sind.</p>
-      <button id="yes-button">Ja</button>
-      <button id="no-button">Nein</button>
-    </div>
+<!-- Modal -->
+<div id="confirmationModal" class="modal">
+  <div class="modal-content">
+    <p>Möchten Sie wirklich eine neue Wohnflächenberechnung starten? Alle ihre jetzigen Informationen gehen verloren, da diese nur lokal gespeichert sind.</p>
+    <button id="yes-button">Ja</button>
+    <button id="no-button">Nein</button>
   </div>
 </div>
-
+</div>
 <script src="js/summary.js"></script>
 </body>
 </html>
