add remove button for filled areas and also add "Abziehbare Fläche"

--- a/summary.html
+++ b/summary.html
@@ -154,7 +154,7 @@
             </tbody>
           </table>
           <div class="table-legend">
-            W - Wohnfläche | W (50%) - Wohnfläche (zu 50% anrechenbar) | N - Nutzfläche
+            W - Wohnfläche (zu 100% anrechenbar, Deckenhöhe > 2 Meter) | W (50%) - Wohnfläche (zu 50% anrechenbar, Deckenhöhe < 2 Meter) | W (0%) - Wohnfläche (zu 0% anrechenbar, Deckenhöhe < 1 Meter) | A - Abziehbare Fläche | N - Nutzfläche
           </div>
           <div class="total">
             <p class="inline-block">Ermittelte (tatsächliche) Gesamtwohnfläche durch Vorortvermessung nach WoFLV:</p> <span class="text-right" id="total-wohnflaeche"></span>
