--- a/rooms.html
+++ b/rooms.html
@@ -71,10 +71,11 @@
                 <select class="form-control" id="room-type">
                   <option value="W">Wohnfläche</option>
                   <option value="N">Nutzfläche</option>
+                  <option value="A">Abziehbare Fläche</option>
                 </select>
               </div>
               <div class="form-group col-md-6">
-                <label for="room-type">Geschoss</label>
+                <label for="room-floor">Geschoss</label>
                 <select class="form-control" id="room-floor">
                   <option value="EG">Erdgeschoss</option>
                   <option value="OG">Obergeschoss</option>
@@ -88,6 +89,8 @@
             <div class="form-row area-row">
               <div class="col-12 formsection">
                 <label>Teilbereich</label>
+                <button class="btn btn-secondary btn-sm delete-area ml-2" style="display:none;"><i class="fas fa-trash"></i></button>
+
                 <div class="d-flex align-items-center">
                   <select class="form-control shape mr-2">
                     <option value="rectangle">Rechteck</option>
