--- a/rooms.html
+++ b/rooms.html
@@ -154,8 +154,8 @@
   </div>
 </div>
 <footer class="container mt-5 fixed-bottom mb-4" style="">
-  <button id="prev-page" class="btn btn-danger">Zurück</button>
-  <button id="next-page" class="btn btn-success">Weiter</button>
+  <button id="prev-page" class="btn btn-primary half-btn">Zurück</button>
+  <button id="next-page" class="btn btn-success half-btn">Weiter</button>
 </footer>
 <script src="js/rooms.js"></script>
 <script src="js/utils.js"></script>
