--- a/summary.html
+++ b/summary.html
@@ -174,9 +174,10 @@
     </div>
   </div>
 </div>
-<footer class="container mt-5 mb-4" style="">
-  <button id="go-back" class="btn btn-primary">Zurück</button>
-  <button id="new-calculation" class="btn btn-danger">Neue Wohnflächenberechnung</button>
+<footer class="container mt-5 fixed-bottom mb-4" style="">
+  <button id="go-back" class="btn btn-primary third-btn">Zurück</button>
+  <button id="print-btn" class="btn btn-secondary third-btn">Drucken</button>
+  <button id="new-calculation" class="btn btn-danger third-btn">Neustarten</button>
 </footer>
 
 <!-- Modal -->
