--- a/summary.html
+++ b/summary.html
@@ -162,6 +162,8 @@
             <!-- Room rows will go here -->
             </tbody>
           </table>
+        </div>
+        <div>
           <div class="table-legend">
             W - Wohnfläche (zu 100% anrechenbar, Deckenhöhe > 2 Meter) | W (50%) - Wohnfläche (zu 50% anrechenbar, Deckenhöhe < 2 Meter) | W (0%) - Wohnfläche (zu 0% anrechenbar, Deckenhöhe < 1 Meter) | A - Abziehbare Fläche | N - Nutzfläche
           </div>
